# Anonim-message-bot

./: .env  .gitignore  .railwayignore  Dockerfile  README.md  pyproject.toml  railway.json  requirements.txt
src/: __main__.py  config_reader.py  database.py
src/handlers/: bot_messages.py  chat_commands.py  profile_settings.py  user_commands.py
src/middlewares/: user_middleware.py
